# rapidutf

./: .clang-tidy  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  vcpkg.json
benchmark/: CMakeLists.txt
benchmark/source/: rapidutf_benchmark.cpp
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  variables.cmake
example/: CMakeLists.txt
include/rapidutf/: rapidutf.hpp
source/: rapidutf.cpp
test/: CMakeLists.txt
test/source/: rapidutf_test.cpp
